test/errors/numeric_literal_overflow_fail.hy
// Expect failure: literal exceeds 64-bit range
int main() {
    ulong tooBig = 0x1FFFFFFFFFFFFFFFF
    return 0
}
